--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
-    "vant": "2.0.0",
+    "dayjs": "^1.11.0",
+    "vant": "2.5.7",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -35,8 +36,5 @@
     "lint-staged": "^11.1.2",
     "postcss-pxtorem": "^6.0.0",
     "vue-template-compiler": "^2.6.14"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
   }
 }
