--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "cropperjs": "^1.5.12",
     "dayjs": "^1.11.0",
+    "json-bigint": "^1.0.0",
     "lodash": "^4.17.21",
     "vant": "2.5.7",
     "vue": "^2.6.14",
